fixing color contrast on dark theme

--- a/styles/Listen.module.scss
+++ b/styles/Listen.module.scss
@@ -29,7 +29,7 @@
 }
 
 .title_light{
-    color:#fff;
+    color: $accent;
     line-height: 1.1;
 }
 
