--- a/styles/_nav.scss
+++ b/styles/_nav.scss
@@ -25,6 +25,10 @@
     outline: 3px solid $accent;
     outline-offset: 3px;
   }
+
+  .nav_link:hover{
+    color: $accent;
+  }
 }
 
 .nav_list {
@@ -40,7 +44,7 @@
 
 .nav_link {
   color: inherit;
-  font-weight: 400;
+  font-weight: 500;
   font-size: $font-size-lg;
   text-decoration: none;
   text-transform: uppercase;
@@ -49,7 +53,7 @@
 
 .nav_link:hover,
 .nav_link:focus {
-  color: $accent;
+  color:$accent;
 }
 
 .nav_link:hover {
