--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,8 +1,8 @@
 // theme colors
-$primary: #313638 !default;
-$secondary: #e8e9eb !default;
-$error: #d32752 !default;
-$accent: #d82b00 !default;
+$primary: #161a1d !default;
+$secondary: #f5f3f4 !default;
+$error: #ffba08 !default;
+$accent: #e5383b !default;
 
 // spacing
 $base-padding: 1em;
